<resources>
    <string name="app_name_mobile_release" translatable="false">Fermata</string>
    <string name="app_name_auto_release" translatable="false">Fermata Auto</string>
    <string name="app_name_mobile_debug" translatable="false">Debug Fermata</string>
    <string name="app_name_auto_debug" translatable="false">Debug Fermata Auto</string>
    <string name="mirror_service_name_release" translatable="false">Fermata Mirror</string>
    <string name="mirror_service_name_debug" translatable="false">Debug Fermata Mirror</string>
    <string name="mirror_fs_service_name_release" translatable="false">FS Fermata Mirror</string>
    <string name="mirror_fs_service_name_debug" translatable="false">Debug FS Fermata Mirror</string>
    <string name="media_service_name_mobile_release" translatable="false">@string/app_name_mobile_release</string>
    <string name="media_service_name_auto_release" translatable="false">Fermata Media Service</string>
    <string name="media_service_name_mobile_debug" translatable="false">@string/app_name_mobile_debug</string>
    <string name="media_service_name_auto_debug" translatable="false">Debug Fermata Media Service</string>
    <string name="engine_mp_name" translatable="false">MediaPlayer</string>
    <string name="engine_exo_name" translatable="false">ExoPlayer</string>
    <string name="engine_vlc_name" translatable="false">VLC</string>
    <string name="module_name_gdrive" translatable="false">Google Drive</string>
    <string name="module_name_sftp" translatable="false">SFTP</string>
    <string name="module_name_smb" translatable="false">SMB</string>
    <string name="module_name_web" translatable="false">Web</string>
    <string name="module_name_tv" translatable="false">TV</string>
    <string name="addons">Addons</string>
    <string name="addon_name_tv">TV</string>
    <string name="addon_name_web_browser">Web browser</string>
    <string name="addon_name_youtube" translatable="false">Youtube</string>
    <string name="addon_name_jellyfin" translatable="false">Jellyfin</string>
    <string name="addon_name_felex" translatable="false">Felex</string>
    <string name="addon_name_cast" translatable="false">Google Cast</string>
    <string name="addon_name_chat" translatable="false">ChatGPT</string>
    <string name="addon_name_translate" translatable="false">Language translator</string>
    <string name="addon_name_subgen" translatable="false">Subtitles generator</string>
    <string name="addon_name_whisper" translatable="false">Whisper</string>
    <string name="addon_name_mlkit" translatable="false">ML Kit</string>
    <string name="addon_name_mlkit_translate" translatable="false">ML Kit Translate</string>
    <string name="addon_name_opusmt" translatable="false">OPUS-MT</string>
    <string name="addon_name_opusmt_translate" translatable="false">OPUS-MT Translate</string>
    <string name="addon_name_nllb" translatable="false">NLLB-200</string>
    <string name="addon_name_nllb_translate" translatable="false">NLLB-200 Translate</string>
    <string name="addon_name_poi" translatable="false">POI</string>
    <string name="drive_home">Home</string>
    <string name="drive_home_title">What do you want to watch?</string>
    <string name="drive_home_subtitle">Pick a service or resume what was playing.</string>
    <string name="quick_access">Quick access</string>
    <string name="youtube_home_subtitle">Videos and subscriptions</string>
    <string name="jellyfin_home_subtitle">Your media library</string>
    <string name="open_youtube">Open YouTube</string>
    <string name="open_jellyfin">Open Jellyfin</string>
    <string name="resume_playback">Resume playback</string>
    <string name="browse_more">More</string>
    <string name="interface_prefs">Interface</string>
    <string name="interface_prefs_aa">Android Auto</string>
    <string name="playback_settings">Playback settings</string>
    <string name="playback_control">Playback control</string>
    <string name="engine_prefs">Media engine</string>
    <string name="theme">Application theme</string>
    <string name="theme_sub">Current theme: %1$s</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_system">System</string>
    <string name="theme_black">Black</string>
    <string name="theme_star_wars">Star Wars</string>
    <string name="theme_purple">Purple</string>
    <string name="theme_classic">Classic</string>
    <string name="nav_bar_pos">Navigation bar position</string>
    <string name="nav_bar_pos_sub">Current position: %1$s</string>
    <string name="nav_bar_pos_bottom">Bottom</string>
    <string name="nav_bar_pos_left">Left</string>
    <string name="nav_bar_pos_right">Right</string>
    <string name="customize_navigation">Customize navigation</string>
    <string name="pin_to_navigation">Pin to navigation</string>
    <string name="unpin_from_navigation">Unpin from navigation</string>
    <string name="hide_from_navigation">Hide from navigation</string>
    <string name="navigation_item_state">%1$s · %2$s</string>
    <string name="navigation_state_pinned">Pinned</string>
    <string name="navigation_state_more">In More</string>
    <string name="navigation_state_hidden">Hidden</string>
    <string name="show_track_icons">Show track icons</string>
    <string name="lang">Language</string>
    <string name="trans_lang">Translation language</string>
    <string name="hide_bars">Hide bars</string>
    <string name="hide_bars_sub">Hide top and bottom bars when the control panel appears</string>
    <string name="show_pg_up_down">Show page up/down buttons</string>
    <string name="use_dpad_cursor">Use cursor for D-pad navigation</string>
    <string name="fullscreen_mode">Fullscreen mode</string>
    <string name="nav_bar_size">Navigation bar size</string>
    <string name="tool_bar_size">Tool bar size</string>
    <string name="control_panel_size">Control panel size</string>
    <string name="text_icon_size">Text and icons size</string>
    <string name="subtitles_size">Subtitles text size</string>
    <string name="key_bindings">Key bindings</string>
    <string name="key_on_click">On click</string>
    <string name="key_on_long_click">On long click</string>
    <string name="key_on_dbl_click">On double click</string>
    <string name="action_stop">Stop</string>
    <string name="action_play">Play</string>
    <string name="action_pause">Pause</string>
    <string name="action_play_pause">Play/Pause</string>
    <string name="action_prev">Play previous</string>
    <string name="action_next">Play next</string>
    <string name="action_prev_folder">Play previous folder</string>
    <string name="action_next_folder">Play next folder</string>
    <string name="action_rw">Rewind</string>
    <string name="action_ff">Fast forward</string>
    <string name="action_vol_up">Volume up</string>
    <string name="action_vol_down">Volume down</string>
    <string name="action_vol_mute_unmute">Mute/Unmute</string>
    <string name="action_activate_voice_ctrl">Activate voice control</string>
    <string name="action_menu">Menu</string>
    <string name="action_cp_menu">Control panel menu</string>
    <string name="action_back_or_exit">Back or exit</string>
    <string name="action_exit">Exit</string>
    <string name="action_default">Default</string>
    <string name="action_none">None</string>
    <string name="play_next_on_completion">Play next on completion</string>
    <string name="rw_ff_click">RW/FF - click</string>
    <string name="rw_ff_long_click">RW/FF - long click</string>
    <string name="prev_next_long_click">Prev/Next - long click</string>
    <string name="play_pause_stop">Stop on Play/Pause long click</string>
    <string name="time">Time</string>
    <string name="time_unit">Time unit</string>
    <string name="time_unit_sub">Current value: %1$s</string>
    <string name="time_unit_second">Second</string>
    <string name="time_unit_minute">Minute</string>
    <string name="time_unit_percent">Percent</string>
    <string name="video_control">Video control</string>
    <string name="video_control_start_delay">Show on start</string>
    <string name="video_control_touch_delay">Show on touch</string>
    <string name="video_control_seek_delay">Show on seek</string>
    <string name="video_aa_show_status">Show status bar in Android Auto</string>
    <string name="enable_exoplayer">Enable ExoPlayer</string>
    <string name="enable_vlcplayer">Enable VLC</string>
    <string name="preferred_audio_engine">Preferred audio engine</string>
    <string name="preferred_video_engine">Preferred video engine</string>
    <string name="engine_installed">Media engine installed: %1$s</string>
    <string name="engine_uninstalled">Media engine uninstalled: %1$s</string>
    <string name="preferred_media_scanner">Preferred media scanner</string>
    <string name="preferred_media_scanner_default">Default</string>
    <string name="preferred_media_scanner_system">System</string>
    <string name="voice_search">Voice search</string>
    <string name="voice_control">Voice control</string>
    <string name="voice_control_fb">Floating button</string>
    <string name="voice_control_sub_long">Activate voice control on long press</string>
    <string name="voice_control_subst">Word substitution</string>
    <string name="voice_control_subst_sub">Replace a word with an another word or a phrase</string>
    <string name="voice_control_subst_hint">on: play\noff: pause</string>
    <string name="module_installation">Module installation: %1$s</string>
    <string name="install_pending">Installation pending: %1$s</string>
    <string name="downloading">Downloading %1$s</string>
    <string name="installing">Installing %1$s</string>
    <string name="speed">Speed</string>
    <string name="audio_effects">Audio effects</string>
    <string name="equalier">Equalizer</string>
    <string name="preset_name">Preset name</string>
    <string name="virtualizer">Virtualizer</string>
    <string name="auto">Auto</string>
    <string name="binaural">Binaural</string>
    <string name="transaural">Transaural</string>
    <string name="bass_boost">Bass boost</string>
    <string name="vol_boost">Volume boost</string>
    <string name="strength">Strength</string>
    <string name="apply_to">Apply to</string>
    <string name="video">Video</string>
    <string name="video_settings">Video settings</string>
    <string name="video_scaling">Video scaling</string>
    <string name="hw_accel">Hardware acceleration</string>
    <string name="hw_accel_auto">Auto</string>
    <string name="hw_accel_full">Full</string>
    <string name="hw_accel_decoding">Decoding</string>
    <string name="hw_accel_disabled">Disabled</string>
    <string name="video_scaling_best">Best fit</string>
    <string name="video_scaling_fill">Fill screen</string>
    <string name="video_scaling_orig">Original size</string>
    <string name="video_scaling_4" translatable="false">4x3</string>
    <string name="video_scaling_16" translatable="false">16x9</string>
    <string name="audio">Audio</string>
    <string name="audio_delay">Audio delay</string>
    <string name="audio_delay_aa">Audio delay - Android Auto</string>
    <string name="preferred_audio_lang">Preferred audio stream languages</string>
    <string name="preferred_audio_key">Prefer audio stream with keywords</string>
    <string name="select_audio_stream">Select audio stream</string>
    <string name="subtitles">Subtitles</string>
    <string name="subtitles_auto">Auto generated</string>
    <string name="subtitle_delay">Subtitles delay</string>
    <string name="display_subtitles">Display subtitles</string>
    <string name="preferred_sub_lang">Preferred subtitles languages</string>
    <string name="preferred_sub_key">Prefer subtitles with keywords</string>
    <string name="select_subtitles">Select subtitles</string>
    <string name="sub_gen_buf">Buffer length</string>
</resources>